--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "compression": "^1.7.4",
-    "express": "^4.17.1",
-    "mongoose": "^5.5.15",
+    "express": "^4.17.3",
+    "mongodb": "^4.4.1",
+    "mongoose": "^5.13.14",
     "morgan": "^1.9.1"
   }
 }
